# devopsLab

./: Dockerfile  FuncA.cpp  FuncA.h  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  config.status  configure.ac  configure~  main.cpp  program  test_FuncA  test_FuncA.cpp
.deps/: program-FuncA.Po  program-main.Po  test_FuncA.Po
.github/workflows/: build.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
debian/: autoreconf.after  autoreconf.before  changelog  control
debian/.debhelper/program/: dbgsym-build-ids
debian/.debhelper/program/dbgsym-root/DEBIAN/: control  md5sums
debian/program/DEBIAN/: control  md5sums
